--- a/M2S05-banco/M2S05-banco.csproj
+++ b/M2S05-banco/M2S05-banco.csproj
@@ -11,9 +11,11 @@
   <ItemGroup>
     <None Remove="Models\" />
     <None Remove="Services\" />
+    <None Remove="Interface\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Services\" />
+    <Folder Include="Interface\" />
   </ItemGroup>
 </Project>
